--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "wqn-paper"
+name = "wqn-acha"
 version = "0.1.0"
 description = ""
-authors = ["Matteo <matteo.dora@ens.fr>"]
+authors = ["Matteo Dora <matteo.dora@ieee.org>"]
 
 [tool.poetry.dependencies]
 python = "~3.10"
@@ -12,11 +12,8 @@ matplotlib = "^3.5.2"
 PyWavelets = "^1.3.0"
 ipykernel = "^6.13.0"
 fbm = "^0.3.0"
-cmocean = "^2.0"
 h5py = "^3.7.0"
 pandas = "^1.4.2"
-pyemd = "^0.5.1"
-sklearn = "^0.0"
 tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
